--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "parcel": "^2.5.0",
     "postcss": "^8.4.14",
     "sortablejs": "^1.15.0",
-    "typescript": "^4.7.2"
+    "typescript": "~4.7.2"
   }
 }
